# security-system

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  mkdocs.yaml  prepare.sh  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: .pre-commit.yml
application/: eslint.config.js  package-lock.json  package.json
application/scripts/: reset-project.js
docs/: index.md
server/: conftest.py  pyproject.toml
server/src/server/: Dockerfile
server/src/server/api/backend/: interface.py
server/src/server/api/camera/: interface.py
server/src/server/api/stm/: interface.py
server/src/server/cli/: cli_entry.py
server/src/server/common/: exceptions.py  logger.py
server/src/server/db_server/: Dockerfile  db_manager.py  dto.py  interface.py  main.py  models.py
server/src/server/grpc/: server.py  servicer.py
server/src/server/grpc/proto/: definition.proto  definition_pb2.py  definition_pb2_grpc.py  generate_proto.sh
server/src/server/grpc_server/: grpc_main_server.py  server.py  servicer.py
server/src/server/grpc_server/proto/: definition.proto  definition_pb2.py  definition_pb2.pyi  definition_pb2_grpc.py  generate_proto.sh
server/src/server/security_server/: config.py  factory.py  main_server.py  server.py
server/tests/tests_basic/: test_basic.py  test_server.py
stm/: .gitignore  Dockerfile
stm/src/: main.c
